# InstallHub

./: .gitignore  CMakeLists.txt  CMakePresets.json
src/MainWindow/: MainWindow.cpp
